# COMPAS

./: CMakeLists.txt  setup.py
src/: CMakeLists.txt  pycompas.cpp
